[tool.poetry]
name = "asap"
version = "0.1.0"
description = ""
authors = ["thephantom99"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.0"
scikit-image = "^0.22.0"
numpy = "1.25.2"
hyperspy = "^1.7.5"
pyqtgraph = "^0.13.3"
pyqt5 = "^5.15.10"
pyqtdarktheme = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
